<package>
  <name>xamla_sysmon_node</name>
  <version>0.1.0</version>
  <description>Xamla System Monitor Node. Watches a configurable list of topics and publishes a global health state of the system.</description>
  <maintainer email="info@xamla.com">Xamla</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>xamla_sysmon_msgs</build_depend>
  <build_depend>topic_tools</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>xamla_sysmon_msgs</run_depend>
  <run_depend>topic_tools</run_depend>
</package>
